--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@
 
   <body>
     <header>
-      <a href="./home.html" class="title"><img class="logo" src="./images/capoo_icon.png" />Capoo's fansclub</a>
+      <img class="logo" src="./images/capoo_icon.png" />
+      <a href="./home.html" class="title">Capoo's fans club</a>
       <nav>
         <ul class="nav_links">
           <li><a href="./home.html">Home</a></li>
@@ -20,7 +21,7 @@
       </nav>
       <a class="button" href="./signup.html"><button>Sign Up</button></a>
     </header>
-    <div class="parallax">
+    <div class="backGround">
       <div class="body"></div>
     </div>
   </body>
