--- a/home.html
+++ b/home.html
@@ -10,7 +10,8 @@
 
   <body>
     <header>
-      <a href="./home.html" class="title"><img class="logo" src="./images/capoo_icon.png" />Capoo's fans club</a>
+      <img class="logo" id="playSound" src="./images/capoo_icon.png" />
+      <a href="./home.html" class="title">Capoo's fans club</a>
       <nav>
         <ul class="nav_links">
           <li><a href="./home.html">Home</a></li>
