--- a/signup.html
+++ b/signup.html
@@ -19,10 +19,43 @@
           <li><a href="#">Forum</a></li>
         </ul>
       </nav>
-      <a class="button" href="./signup.html"><button>Sign Up</button></a>
+      <a class="button" href="./signup.html"><button>Register</button></a>
     </header>
     <div class="backGround">
-      <div class="body"></div>
+      <div class="body">
+        <a class="body_title">Sign up</a>
+        <img class="body_image" src="./images/capoo_hi.gif" loop="infinite" />
+        <form>
+          <p>Please fill in this form to create an account.</p>
+          <hr />
+          <label><b>Username</b></label>
+          <input type="text" placeholder="Enter Username" required />
+          <label><b>Email</b></label>
+          <input type="text" placeholder="Enter Email" required />
+          <label><b>Password</b></label>
+          <input type="password" placeholder="Enter Password" required />
+
+          <label><b>Repeat Password</b></label>
+          <input type="password" placeholder="Repeat Password" required />
+          <div class="clearfix">
+            <button class="cancelbtn">Cancel</button>
+            <button class="signupbtn">Sign Up</button>
+          </div>
+        </form>
+      </div>
+      <div class="background_capoos">
+        <img src="./images/capoo_reject.gif" />
+        <img src="./images/capoo_evil.gif" />
+        <img src="./images/capoo_king.gif" />
+        <img src="./images/capoo_shit.gif" />
+        <img src="./images/capoo_looking_forward.gif" />
+        <img src="./images/capoo_computer.gif" />
+        <img src="./images/capoo_excited.gif" />
+        <img src="./images/capoo_giphy.gif" />
+        <img src="./images/capoo_wave.gif" />
+        <img src="./images/capoo_lick.gif" />
+      </div>
     </div>
+    <script src="./logics.js"></script>
   </body>
 </html>
