--- a/about.html
+++ b/about.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="./images/capoo_love.jpg" />
-    <title>About</title>
+    <title>About Us</title>
   </head>
-
-  <body>
+  <body onload="typeWriter()">
     <header>
-      <img class="logo" src="./images/capoo_icon.png" />
+      <img class="logo" src="./images/capoo_icon.png" alt="logo" />
       <a href="./home.html" class="title">Capoo's fans club</a>
       <nav>
         <ul class="nav_links">
@@ -19,10 +18,29 @@
           <li><a href="#">Forum</a></li>
         </ul>
       </nav>
-      <a class="button" href="./signup.html"><button>Sign Up</button></a>
+      <a class="button" href="./signup.html"><button>Register</button></a>
     </header>
     <div class="backGround">
-      <div class="body"></div>
+      <div class="body">
+        <a class="body_title">About us</a>
+        <img class="body_image" src="./images/capoo_meditating.gif" loop="infinite"/>
+        <p id="body_paragraph" class="body_paragraph"></p>
+        <button id="body_botleft_btn"></button>
+        <button id="body_botright_btn"></button>
+      </div>
+      <div class="background_capoos">
+        <img src="./images/capoo_reject.gif" />
+        <img src="./images/capoo_evil.gif" />
+        <img src="./images/capoo_king.gif" />
+        <img src="./images/capoo_shit.gif" />
+        <img src="./images/capoo_looking_forward.gif" />
+        <img src="./images/capoo_computer.gif" />
+        <img src="./images/capoo_excited.gif" />
+        <img src="./images/capoo_giphy.gif" />
+        <img src="./images/capoo_wave.gif" />
+        <img src="./images/capoo_lick.gif" />
+      </div>
     </div>
+    <script src="./logics.js"></script>
   </body>
 </html>
