--- a/signup.html
+++ b/signup.html
@@ -7,39 +7,51 @@
     <link rel="icon" href="./images/capoo_love.jpg" />
     <title>Sign up</title>
   </head>
-
+  <audio id="myAudio">
+    <source src="./audio/capoo_soundtrack.mp3" type="audio/mpeg"  >
+  </audio>
   <body>
-    <header>
-      <img class="logo" src="./images/capoo_icon.png" />
-      <a href="./home.html" class="title">Capoo's fans club</a>
-      <nav>
-        <ul class="nav_links">
-          <li><a href="./home.html">Home</a></li>
-          <li><a href="./about.html">About</a></li>
-          <li><a href="#">Forum</a></li>
+    <nav class="navbar">
+      <div class="navbar__container">
+        <a href="./home.html" id="navbar__logo"><img src="./images/capoo_icon.png" height="70" width="70" >Capoo's Fans Club</img></a>
+        <div class="navbar__toggle" id="mobile-menu">
+          <span class="bar"></span> <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+        <ul class="navbar__menu">
+          <li class="navbar__item">
+            <a href="./home.html" class="navbar__links" id="home-page">Home</a>
+          </li>
+          <li class="navbar__item">
+            <a href="./about.html" class="navbar__links" id="about-page">About</a>
+          </li>
+          <li class="navbar__item">
+            <a href="#" class="navbar__links" id="forum-page">Forum</a>
+          </li>
+          <li class="navbar__btn">
+            <a href="./signup.html" class="active">Register</a>
+          </li>
         </ul>
-      </nav>
-      <a class="button" href="./signup.html"><button>Register</button></a>
-    </header>
+      </div>
+    </nav>
     <div class="backGround">
       <div class="body">
         <a class="body_title">Sign up</a>
-        <img class="body_image" src="./images/capoo_hi.gif" loop="infinite" />
-        <form>
+        <img class="body_image" src="./images/capoo_hi.gif" loop="infinite" onclick="playAudio()"/>
+        <form onSubmit="return checkFields()">
           <p>Please fill in this form to create an account.</p>
           <hr />
           <label><b>Username</b></label>
-          <input type="text" placeholder="Enter Username" required />
+          <input type="text" id="username" placeholder="Enter Username"/>
           <label><b>Email</b></label>
-          <input type="text" placeholder="Enter Email" required />
+          <input type="email" id="email" placeholder="Enter Email"/>
           <label><b>Password</b></label>
-          <input type="password" placeholder="Enter Password" required />
-
+          <input type="password" id="password" placeholder="Enter Password"/>
           <label><b>Repeat Password</b></label>
-          <input type="password" placeholder="Repeat Password" required />
+          <input type="password" id="rpPassword" placeholder="Repeat Password"/>
           <div class="clearfix">
-            <button class="cancelbtn">Cancel</button>
-            <button class="signupbtn">Sign Up</button>
+          <input class="signupbtn" type="reset" value="Reset" />
+          <input type="submit" value="Submit"  class="cancelbtn"/>
           </div>
         </form>
       </div>
