--- a/about.html
+++ b/about.html
@@ -13,14 +13,14 @@
   <body onload="typeWriter()">
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="./home.html" id="navbar__logo"><img src="./images/capoo_icon.png" height="70" width="70">Capoo's Fans Club</img></a>
+        <a href="./index.html" id="navbar__logo"><img src="./images/capoo_icon.png" height="70" width="70">Capoo's Fans Club</img></a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span> <span class="bar"></span>
           <span class="bar"></span>
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="./home.html" class="navbar__links" id="home-page">Home</a>
+            <a href="./index.html" class="navbar__links" id="home-page">Home</a>
           </li>
           <li class="navbar__item">
             <a href="./about.html" class="navbar__links" id="about-page">About</a>
